<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admine.labuptomusic.MediaActivity">

    <TextView
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_pad_15"
        android:text="@string/label_play_from_URI"
        android:textAlignment="center"
        android:textSize="@dimen/txt_size_medium" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_choose_media"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:background="@android:color/holo_blue_light"
        android:textSize="@dimen/txt_size_medium"
        tools:text="@string/action_choose" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_pad_15"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_media_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:textSize="@dimen/txt_size_medium"
            tools:text="@string/action_play" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_media_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_pad_10"
            android:background="@android:color/holo_orange_light"
            android:textSize="@dimen/txt_size_medium"
            tools:text="@string/action_stop" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_media_pause_resume"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_pad_10"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/action_resume"
            android:textSize="@dimen/txt_size_medium" />
    </LinearLayout>

</LinearLayout>