<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admine.labuptomusic.Home">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_home_user_image"
        android:layout_width="@dimen/dimens_image"
        android:layout_height="@dimen/dimens_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_pad_20"
        android:src="@mipmap/ic_launcher" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_home_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_home_user_image"
        android:layout_marginTop="@dimen/margin_pad_5"
        android:gravity="center"
        android:text="@string/label_name"
        android:textSize="@dimen/txt_size_medium" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_home_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_home_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_pad_5"
        android:text="@string/label_address"
        android:textSize="@dimen/txt_size_medium" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_home_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_home_name"
        android:layout_marginLeft="@dimen/margin_pad_30"
        android:layout_marginTop="@dimen/margin_pad_5"
        android:layout_toRightOf="@+id/tv_home_address"
        android:text="@string/label_contact"
        android:textSize="@dimen/txt_size_medium" />

    <RelativeLayout
        android:id="@+id/rl_textviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_home_address"
        android:layout_marginTop="@dimen/margin_pad_10">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_home_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textSize="@dimen/txt_size_large" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_home_phoneno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/label_phone_no"
            android:textSize="@dimen/txt_size_large" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_textviews"
        android:layout_marginTop="@dimen/margin_pad_10"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_home_camera_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_home_btns"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:text="@string/action_open_camera_activity"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_large" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_home_list_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_home_btns"
            android:background="@color/colorBlueLight"
            android:gravity="center"
            android:text="@string/action_open_list_activity"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_large" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_home_media_activity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_home_btns"
            android:background="@color/colorRedLight"
            android:gravity="center"
            android:text="@string/action_open_media_activity"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_large" />

        <Button
            android:id="@+id/btn_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rating bar" />
    </LinearLayout>

</RelativeLayout>

